--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,15 @@ after_success:
   - docker push imcool2551/multi-nginx
   - docker push imcool2551/multi-server
   - docker push imcool2551/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-1-424468057789
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
