replaced with new service-account

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - source $HOME/google-cloud-sdk/path.bash.inc
   # Install kubectl
   - gcloud components update kubectl
-  # Allow Travis to access Google Account by storing encrypted-IAM-Json as env-var (Need travis login)
+  # Allow Travis to access Google Account by storing encrypted-IAM-Json as env-var (Need travis login using Github PAT)
   - gcloud auth activate-service-account --key-file=service-account.json
   # Set gcloud CLI to use multi-k8s project and its cluster
   - gcloud config set project logical-iridium-302417
