--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,15 @@ env:
     - SHA=$(git rev-parse HEAD)
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
-  - openssl aes-256-cbc -K $encrypted_248d61edfafe_key -iv $encrypted_248d61edfafe_iv -in service_account.json.enc -out service_account.json -d
+  - openssl aes-256-cbc -K $encrypted_2c6bf604352c_key -iv $encrypted_2c6bf604352c_iv -in serviceAccount.json.enc -out serviceAccount.json -d
   # Install Google Cloud SDK
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   # Install kubectl
   - gcloud components update kubectl
-  # Allow Travis to access Google Account by storing encrypted-IAM-Json as env-var (Need travis login using Github PAT)
-  - gcloud auth activate-service-account --key-file=service_account.json
+  # Allow Travis to access Google Account by storing encrypted-IAM-Json as environment variables
+  # Need travis login using Github PAT to encrypt the file
+  - gcloud auth activate-service-account --key-file=serviceAccount.json
   # Set gcloud CLI to use multi-k8s project and its cluster
   - gcloud config set project logical-iridium-302417
   - gcloud config set compute/zone asia-east1-a
